syntax = "proto3";

package sum;

option go_package = "sumpb";

message SumRequest{
    int32 a = 1;
    int32 b = 2;
}

message SumResponse{
    int32 result = 1;
}

message NumRequest{
    int32 num = 1;
}

message NumResponse{
    int32 result = 1;
}

message AverageRequest{
    int32 num = 1;
}

message AverageResponse{
    float result = 1;
}

message FindMaximumRequest{
    int32 num = 1;
}

message FindMaximumResponse{
    int32 max = 1;
}

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}

service CalculateService {
    rpc Sum(SumRequest) returns(SumResponse){};
    rpc PrimeNumberDecomposition(NumRequest) returns(stream NumResponse){};
    rpc ComputeAverage(stream AverageRequest) returns(AverageResponse){};
    rpc FindMaximum(stream FindMaximumRequest) returns(stream FindMaximumResponse){};
    rpc SquareRoot(SquareRootRequest) returns(SquareRootResponse){};
}